--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -162,7 +162,10 @@
 				}
 			);
 		});
-		
+
+		// level 1 navigation
+		j$('#nav-order').addClass('level-1-navigation-selected');
+				
 		// level 2 navigation
 		j$('.level-2-navigation').show();
 		j$('#nav-buyorder-browse').addClass('level-2-navigation-selected');
