--- a/template/ManageUserProfile.html
+++ b/template/ManageUserProfile.html
@@ -58,6 +58,9 @@
 			console.log(home);
 			console.log(office);		
 		});
+		
+		// level 1 navigation
+		j$('#nav-user').addClass('level-1-navigation-selected');
 	});
 </script>
 {% endblock %}
