--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -12,9 +12,9 @@
 
 		<li id="nav-cart-review">
 			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
-				<img src="http://cdn3.iconfinder.com/data/icons/glyph/227/Tag-128.png" />
+				<img src="http://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/zoom-in-128.png" />
 			</a>
-			<h3>Place Order</h3>
+			<h3>Cart Details</h3>
 		</li>		
 		{% endif %}
 		
