--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -256,7 +256,10 @@
 			// this is the actual INPUT field that will be submitted in form
 			j$('#input-product-description').html(content);
      	});
-     	
+
+		// level 1 navigatino
+		j$('#nav-order').addClass('level-1-navigation-selected');
+		     	
      	// level 2 navigation on
      	j$('.level-2-navigation').show();
      	j$('#nav-buyorder-post').addClass('level-2-navigation-selected');
