--- a/template/BrowseBuyOrderByOwner.html
+++ b/template/BrowseBuyOrderByOwner.html
@@ -3,6 +3,9 @@
 {% block customJS %}
 	<script type="text/javascript">
 		j$(document).ready(function(){
+			// level 1 navigation
+			j$('#nav-order').addClass('level-1-navigation-selected');
+			
 			// show level 2 navigation pane
 			j$('.level-2-navigation').show();
 			j$('#nav-buyorder-owner').addClass('level-2-navigation-selected');
