--- a/template/ManageBuyOrder.html
+++ b/template/ManageBuyOrder.html
@@ -3,6 +3,8 @@
 {% block customJS %}
 <script type="text/javascript">
     j$(document).ready(function(){	
+    
+    	j$('#nav-order').addClass('level-1-navigation-selected');
 		j$('.level-2-navigation').show();
 		j$('#nav-cart-manage').addClass('level-2-navigation-selected');
     });
