--- a/template/base.html
+++ b/template/base.html
@@ -55,22 +55,22 @@
 <table id="site-layout">
 <tr><td class="level-1-navigation">
 		<ul>		
-			<li>
+			<li id="nav-order">
 				<a href="/buyorder/browse">
 				<img src="http://cdn2.iconfinder.com/data/icons/woothemes/PNG/shopppingcart.png" title="browse and shop"/>
 				</a>
 			</li>
-			<li>
+			<li id="nav-banking">
 				<a href="/cart/banking">
 				<img src="http://cdn4.iconfinder.com/data/icons/is_beta_accounting/png/128/money.png" title="accounting"/>
 				</a>
 			</li>			
-			<li>
+			<li id="nav-user">
 				<a href="/user/profile">
 				<img src="http://cdn2.iconfinder.com/data/icons/humano2/128x128/actions/user-group-new.png" title="setting"/>
 				</a>
 			</li>
-			<li>
+			<li id="nav-reporting">
 				<a href="">
 				<img src="http://cdn5.iconfinder.com/data/icons/customicondesign-office6-shadow/128/custom-reports.png" title="reporting"/>
 				</a>
