--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -33,9 +33,8 @@
 				
 				// reset inputs
 				j$('div#step-1').find('input').val('');
-				j$('div#step-1').find('textarea').val('');
+     			tinyMCE.activeEditor.setContent('');
 				j$('div#step-2').find('input').val('');
-				j$('div#step-2').find('textarea').val('');
 				j$('.css3-columns-4').html('');
 				break;
 			default:
