--- a/template/base.html
+++ b/template/base.html
@@ -5,10 +5,12 @@
 	<meta charset="utf-8">
 	<title>Anthem Market Place</title>
 	<meta name="author" content="Feng X.">
+	<link rel="stylesheet" type="text/css" href="/static/beautiful_tables/reset-min.css">
+			
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<!--LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/dot-luv/jquery-ui.min.css" TYPE="text/css" MEDIA=screen-->
-	<LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/redmond/jquery-ui.min.css" TYPE="text/css" MEDIA=screen>
+	<LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/themes/smoothness/jquery-ui.min.css" TYPE="text/css" MEDIA=screen>
 	<script src="https://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 
 	<!-- JS to turn a form into AJAX call -->
@@ -20,7 +22,8 @@
 	<!-- jQuery dataTable -->
 	<script type="text/javascript" src="/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js"></script>
 	<LINK REL=StyleSheet HREF="/static/DataTables-1.9.4/media/css/jquery.dataTables.css" TYPE="text/css" MEDIA=screen>
-
+	<link rel="stylesheet" type="text/css" href="/static/beautiful_tables/cell_styles.css">
+		
 	<!-- carousel -->
 	<script type="text/javascript" src="/static/carouFredSel-6.2.0/jquery.carouFredSel-6.2.0.js"></script>
 
