--- a/template/ManageBuyOrderCart.html
+++ b/template/ManageBuyOrderCart.html
@@ -24,7 +24,7 @@
 		});
 		
 		j$('#table-carts').dataTable({
-			"bJQueryUI": true
+			"sPaginationType": "full_numbers"
 		});
     });
     
@@ -38,41 +38,45 @@
 		links to get details of a cart to assist your decision. May the force be with you.
 	</p>
 
-<table class="table-row-border" id="table-carts">
-	<thead><tr>	
-				<td>Cart Number</td>
-				<td>For Client</td>
-				<td>Seller</td>
-				<td>Posting Buyer</td>
-				<td>Status</td>
-				<td>Shipping</td>
-				<td>Item Count</td>
-			</tr>
+<table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="table-carts">
+	<thead>
+		<tr><td></td></tr>
 	</thead>
 	<tbody>
 		{% for c in my_carts %}
 			<tr>
-				<td>
+				<td style="text-align:left;padding:10px;">
 					<a href="{{ review_url }}?cart={{ c.key.id() }}">
-						<span class="ss-label">
+						<h4>
 						Cart# {{ c.key.id() }}
+						<span class="redheart" style="float:right;">
+						{{ c.status }}
 						</span>
+						</h4>
 					</a>
-					
-				</td>
-				<td>
 					{% if c.terminal_buyer %}
+						<label class="fixed-width-label">For Client</label>
 						{{ c.terminal_buyer.get().nickname }}
 					{% endif %}
-				</td>
-				<td>{{ c.terminal_seller.get().nickname }}</td>
-				<td>
+					
+					<label class="fixed-width-label">Seller</label>
+					{{ c.terminal_seller.get().nickname }}
+					<br />
+					
 					{% if c.broker %}
+						<label class="fixed-width-label">Posting Buyer</label>
 						{{ c.broker.get().nickname }}
+						<br />
 					{% endif %}
-				</td>
-				<td>
-					{{ c.status }}
+					
+					<table class="sf-table">
+						<tr><td>Payable</td>
+							<td>{{ c.payable }}</td>
+							<td>Receivable</td>
+							<td>{{ c.receivable }}</td>
+						</tr>
+					</table>
+					
 					{% if c.fills|length > 0 %}
 					<div>
 						{% if c.status=='Open' and me.can_be_doc() %}
@@ -88,9 +92,11 @@
 					</div>
 					{% else %}
 					{% endif %}
-				</td>                                        					
-				<td>{{ c.shipping_status }}</td>
-				<td>{{ c.fills|count }}</td>
+					
+					{% if c.shipping_status %}
+						{{ c.shipping_status }}
+					{% endif %}
+				</td>
 			</tr>
 		{% endfor %}
 	</tbody>
