--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -393,7 +393,7 @@ items to give you a starting point for your listing.
 		<div class="image-select-pane">
 			<table id="review-new-buy-order-table">
 			<tr><td class="box-shadow" valign="middle">
-			<img id="review-product-image" src="" style=""/>
+			<img id="review-product-image" src="" style="width:150px;"/>
 			</td><td>
 			
 			<table class="ariel-table table-row-border">
