--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -8,6 +8,7 @@ body{
 
 h1,h2,h3,h4,h5{
 	font-family: Verdana, Geneva, sans-serif;
+	margin-bottom:20px;
 }
 input,textarea,label,span,p,div,select,td{
 	font-family: Verdana, Geneva, sans-serif;
@@ -1595,6 +1596,7 @@ button[item="submit-for-approval-btn"]:hover{
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
+	max-width:250px;
 }
 
 .ariel-table select{
