--- a/template/ManageBuyOrderCart.html
+++ b/template/ManageBuyOrderCart.html
@@ -54,30 +54,35 @@
 						</span>
 						</h4>
 					</a>
-					{% if c.terminal_buyer %}
-						<label class="fixed-width-label">For Client</label>
-						{{ c.terminal_buyer.get().nickname }}
-					{% endif %}
+					Posted on {{ c.created_time }}
 					
-					<label class="fixed-width-label">Seller</label>
-					{{ c.terminal_seller.get().nickname }}
-					<br />
-					
-					{% if c.broker %}
-						<label class="fixed-width-label">Posting Buyer</label>
-						{{ c.broker.get().nickname }}
-						<br />
-					{% endif %}
-					
-					<table class="sf-table">
+					<table class="sf-table" style="margin-top:10px;margin-bottom:10px;">
+						<tr><td>For Client</td>
+							<td>
+								{% if c.terminal_buyer %}
+									{{ c.terminal_buyer.get().nickname }}
+								{% endif %}
+							</td>
+							<td>Posting Buyer</td>
+							<td>
+								{{ c.broker.get().nickname }}
+							</td>
+						</tr>								
 						<tr><td>Payable</td>
 							<td>{{ c.payable }}</td>
 							<td>Receivable</td>
 							<td>{{ c.receivable }}</td>
 						</tr>
+						<tr></tr>
 					</table>
 					
 					{% if c.fills|length > 0 %}
+					<div>
+						{% for f in c.fills %}
+							<img src="{{ f.order.get().image }}" width="60px" height="60px"/>
+						{% endfor %}
+					</div>
+					
 					<div>
 						{% if c.status=='Open' and me.can_be_doc() %}
 							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
