--- a/template/base.html
+++ b/template/base.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Anthem Market Place</title>
 	<meta name="author" content="Feng X.">
-	<link rel="stylesheet" type="text/css" href="/static/beautiful_tables/reset-min.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/reset-min.css">
 			
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
