Truncate order description on review cart page so that an arbitrary description will not expand the table too wide.

--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -236,7 +236,8 @@
 		<img src="{{ b.order.image }}" />
 
 		<h3 item="title">{{ b.order.name|title }}</h3>			
-		<div item="subtitle">{{ b.order.description }}</div>			
+		
+		<div item="subtitle" style="">{{ b.order.description }}</div>			
 		<p>
 			<span class="product-stat" item="qty">{{ b.order.qty }}</span>
 			<span class="product-stat-label">qty</span>
