Add page to display a single BuyOrder in detail in the same fashion as the infocus popup on the browse page. This page will be linked from ReviewCart when user click on individual order to view details while reviewing the card.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -121,6 +121,7 @@ input,textarea,label,span,p,div,select,td{
 }
 ul.tags{
 	padding-left:0;
+	margin-bottom:10px;
 }
 ul.tags li{
 	list-style-type:none;
@@ -1789,7 +1790,7 @@ div.list-of-photo{
 .list-of-photo ul{
 	list-style-type:none;
 	margin:0;
-	padding:0;
+	padding-bottom:50px;
 }
 .list-of-photo li img{
 	width:50px;
