--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -5,16 +5,16 @@
 		{% if me.can_be_nur() %}
 		<li id="nav-buyorder-browse">
 			<a href="/buyorder/browse" title="Browse and shop">
-				<img src="http://cdn4.iconfinder.com/data/icons/devine_icons/128/PNG/Folder%20and%20Places/Stack.png" />
+				<img src="http://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/zoom-in-128.png" />
 			</a>
-			<h3>Shopping</h3>
+			<h3>Browe</h3>
 		</li>
 
 		<li id="nav-cart-review">
 			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
-				<img src="http://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/zoom-in-128.png" />
+				<img src="http://cdn4.iconfinder.com/data/icons/devine_icons/128/PNG/Folder%20and%20Places/Stack.png" />
 			</a>
-			<h3>Cart Details</h3>
+			<h3>My Cart</h3>
 		</li>		
 		{% endif %}
 		
