Browse order by id will be part of the level-1-order navigation. There is not level 2 navigation yet.

--- a/template/BrowseBuyOrderById.html
+++ b/template/BrowseBuyOrderById.html
@@ -22,6 +22,10 @@
 				j$('#my-list-of-buyorder').html(html);
 			}
 		);				
+		
+		// level 1 navigation
+		j$('#nav-order').addClass('level-1-navigation-selected');
+		
 	});
 </script>
 {% endblock %}
